--- a/_pages/home.html
+++ b/_pages/home.html
@@ -11,7 +11,7 @@ include_in_header: true
     <div class="imageWrapper">
             <div class="headerBackground">
                 <div class="container">
-                    {% include header.html %}
+                    {% include ../_includes/header.html %}
                     <div class="iphonePreview">
 
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 0 0" style="position: absolute;">
