playing around with default.html

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -39,7 +39,7 @@ include_in_header: true
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <img class="appIconLarge" src="../assets/appicon.png">
+                            <img class="appIconLarge" src="https://careowl.github.io/assets/appicon.png">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
